# CeruMusic

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  EULA.txt  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.config.ts
.github/workflows/: build-release.yml
docs/: AGENTS.md  index.md
docs/guide/: release.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  dlna.rs  download.rs  hotkeys.rs  http_proxy.rs  local_music.rs  main.rs  plugins.rs  scan.rs  thumbar.rs
src/common/types/: hotkeys.ts
src/main/events/: localMusic.ts
src/main/services/: DownloadManager.ts
src/main/utils/: index.ts
src/main/utils/musicSdk/: index.js  options.ts  utils.ts
src/renderer/: AGENTS.md  components.d.ts  index.html
src/renderer/src/: App.vue  env.d.ts  main.ts  tauri-bridge.ts
src/renderer/src/api/: cloudSongList.ts  listenTogether.ts  songList.ts
src/renderer/src/assets/: main.css
src/renderer/src/components/: GlobalBackground.vue  PluginNoticeDialog.vue  SettingsSearch.vue  SvgIcon.vue  TitleBarControls.vue  Versions.vue  sImage.vue
src/renderer/src/composables/: useAutoUpdate.ts
src/renderer/src/router/: index.ts
src/renderer/src/services/: SettingsSyncService.ts  listenTogetherInvite.ts  request.js
src/renderer/src/store/: AGENTS.md  GlobalPlayStatus.ts  ListenTogether.ts  Settings.ts  audioOutput.ts  dlna.ts  index.ts  search.ts
src/renderer/src/types/: Sources.ts  (+1 more)
(+95 files in other folders)
