[package]
name = "ceru-music"
version = "1.14.1"
description = "CeruMusic desktop backend using Tauri"
authors = ["澜音团队"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
lofty = "0.21.1"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
tokio = { version = "1.41.0", features = ["full"] }
walkdir = "2.5.0"
uuid = { version = "1.11.0", features = ["v4"] }
url = "2.5.2"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
chrono = "0.4.38"
base64 = "0.22.1"
md5 = "0.7.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
